[XCLogger2] v1.2.15 — 权限补全 + 命令注入修复 + r2351Combo flavor (v1.2.15)
- AndroidManifest: sharedUserId注释, 新增4权限(MANAGE_EXTERNAL_STORAGE/FOREGROUND_SERVICE_DATA_SYNC/POST_NOTIFICATIONS/GET_ACCOUNTS)
- build.gradle: v1.2.14→1.2.15, 新增r2351Combo productFlavor
- FilterConfigValidator: 新增filterTag/filterLevel格式校验, 修复命令注入
- r2351_combo_default_config: r2351项目配置文件(1024MB/4096buffer)
- SystemLogCatcher: 新增isLogcatAlive()诊断方法
- CommandSerialExecutor: getTotalSizeGb→getTotalSizeMb残留修复
- ARCHITECTURE+INTEGRATION: sServiceActive/isLogcatAlive/压缩回调链路更新
- keystore.gradle不提交(含明文密码), FilterConfigValidatorTest已删除